<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/dialogView"
        style="@style/formView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewGroupGeneral"
                style="@style/formGroup"
                android:text="@string/general_settings" />

            <org.n52.android.settings.SettingsView
                android:id="@+id/settingsViewGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </org.n52.android.settings.SettingsView>

            <TextView
                android:id="@+id/textViewGroupFilter"
                style="@style/formGroup"
                android:layout_marginTop="5dp"
                android:text="@string/filter_settings" />

            <org.n52.android.settings.SettingsView
                android:id="@+id/settingsViewFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </org.n52.android.settings.SettingsView>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/actionBarDivider" />

    <LinearLayout
        style="?attr/actionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/negativeButton"
            style="?attr/actionButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/positiveButton"
            style="?attr/actionButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>